2010-06-23 Homer Xing <homer.xing@gmail.com>

    * Display size of swap partitions
    * Example proxy string is selectable

2010-06-19 Homer Xing <homer.xing@gmail.com>

    * Improve clean up pane. Reduce space cost.
    * If the server has not been detected, then show nothing.
    * Fix problems when disable getty.

2010-06-19 MA Yue <velly.empire@gmail.com>

    * Add a lot of applications icons

2010-06-18 Homer Xing <homer.xing@gmail.com>

    * Add youtube-dl, download youtube video software, in "Applications->File sharing" category
    * Add unetbootin, create bootable USB flash disk, in "Applications->Other" category
    * Add remastersys, backup your system to live cd, in "Applications->Other" category
    * Improve local deb installation
    * Do not list repositories when list all software items.
    * Recover 49-sansserif.conf
    * Improve software installation speed
    * Display detailed information if software is from Launchpad or external repository

2010-06-17 Homer Xing <homer.xing@gmail.com>

    * Change login window background.

2010-06-16 Homer Xing <homer.xing@gmail.com>

    * Synchronize latest application data from web
    * Automatically check new version
    * Fix bug: bad file descriptor

2010-06-15 QI Chengjie <starboy.qi@gmail.com>

    * Add Adobe AIR

2010-06-15 Homer Xing <homer.xing@gmail.com>

    * Improve processing for AccessDeniedError
    * Show a horizontal separator on main-view
    * Hide 49-sansserif cure
    * Improve icons fetch
    * Support online synchronization
    * Detect policykit
    * Improve server list for Ubuntu and Fedora
    * Improve MTJ server list
    * Detect Poland software as the same way as Chinese software
    * Add GMarks
    * Improve software center pane

2010-06-13 MA Yue <velly.empire@gmail.com>

    * Complete all Firefox tweaks

2010-06-12 Devil Wang <wxjeacen@gmail.com>
    
    * Add DOSBox to software pane

2010-06-11 Ray Chen <chenrano2002@gmail.com>
