@@ -33,42 +33,41 @@ def __bios():
     #The idea of this function is borrowd from cpu-g. Thanks!
     ret = []
     try:
-        ret.append( row(_('BIOS vendor:'), 
-             __read('/sys/devices/virtual/dmi/id/bios_vendor'), 
-             D+'umut_icons/i_bios.png') )
+        string = __read('/sys/devices/virtual/dmi/id/bios_vendor')
+        assert string
+        ret.append( row(_('BIOS vendor:'), string, D+'umut_icons/i_bios.png') )
     except:
-        print >>sys.stderr, 'No such file: bios_vendor'
+        print_traceback()
 
     try:
-        ret.append( row(_('BIOS version:'), 
-             __read('/sys/devices/virtual/dmi/id/bios_version'), 
-             D+'umut_icons/i_bios.png') )
+        string = __read('/sys/devices/virtual/dmi/id/bios_version')
+        assert string
+        ret.append( row(_('BIOS version:'), string, D+'umut_icons/i_bios.png') )
     except:
-        print >>sys.stderr, 'No such file: bios_version'
+        print_traceback()
         
     try:
-        ret.append( row(_('BIOS release date:'), 
-             __read('/sys/devices/virtual/dmi/id/bios_date'), 
-             D+'umut_icons/i_bios.png') )
+        string = __read('/sys/devices/virtual/dmi/id/bios_date')
+        assert string
+        ret.append( row(_('BIOS release date:'), string, D+'umut_icons/i_bios.png') )
     except:
-        print >>sys.stderr, 'No such file: bios_date'
+        print_traceback()
     
     return ret
 
 def __motherboard():
     ret = []
     try:
-        ret.append( row(_('Motherboard name:'), 
-             __read('/sys/devices/virtual/dmi/id/board_name'), 
-             D+'umut_icons/i_motherboard.png') )
+        string = __read('/sys/devices/virtual/dmi/id/board_name')
+        assert string
+        ret.append( row(_('Motherboard name:'), string, D+'umut_icons/i_motherboard.png') )
     except IOError: pass
     except:
         print_traceback()
         
     try:
-        ret.append( row(_('Motherboard vendor:'), 
-             __read('/sys/devices/virtual/dmi/id/board_vendor'), 
-             D+'umut_icons/i_motherboard.png') )
+        string = __read('/sys/devices/virtual/dmi/id/board_vendor')
+        ret.append( row(_('Motherboard vendor:'), string, D+'umut_icons/i_motherboard.png') )
     except IOError: pass
     except:
         print_traceback()
